# eva

./: .gitignore  EVA_源码解读.md  README.md  eva.py  eva_tui.py  pyproject.toml
.eva/sessions/: D__Desktop_一面千石_eva.json
showcase/eva暴走模式/: README.md  hints.md
showcase/linux/: README.md
showcase/wechat-bot/: README.md
tests/: conftest.py  test_eva_backend_protocol.py  test_eva_protocol.py  test_eva_tui.py  test_eva_tui_supp.py  test_eva_unit.py
tests/e2e/: test_evatui.py
tests/integration/: test_run_tui_server.py
tests/protocol/: test_eva_tui_supp.py
tests/unit/: test_capability_enforcement.py  test_edge_cases.py
