[project]
name = "atfield"
version = "0.1.0"
description = "A secure, capability-based agent kernel with sandboxed execution and tamper-proof audit logs. 基于能力模型的安全智能体内核，支持沙箱执行与防篡改审计."
authors = [
    {name = "gckellan",email = "gckellan@gmail.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "requests>=2.28.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [".venv/", "tests/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E402",   # import not at top (load_dotenv at line 6 needed)
    "E501",   # line too long (handled by line-length)
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = false
pretty = true

[dependency-groups]
dev = [
    "textual (>=8.2.4,<9.0.0)",
    "rich (>=15.0.0,<16.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
